Project

General

Profile

Actions

Bug #11850

closed

`define_method(:foo, &:bar)` segfaults irrespective of location or arguments.

Bug #11850: `define_method(:foo, &:bar)` segfaults irrespective of location or arguments.

Added by 0x0dea (D.E. Akers) almost 11 years ago. Updated over 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.3.0dev (2015-12-20 trunk 53209) [x86_64-linux]
[ruby-core:72398]

Description

define_method(:foo, :bar.to_proc) behaves as it did in previous versions of Ruby.

Actions

Also available in: PDF Atom